fix saving diets files to firestore storage instead cloud storage, properly display guide section for phone users.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,7 @@
 @import './styles/landing-theme.css';
+@import './styles/utils.css';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
